--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kurt McClean
-logo: /assets/headshot_circle.png
+logo: /assets/me.png
 description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
