--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kurt McClean
 logo: /assets/me.png
-description: text below image
+description: Information systems tech and Jr. Data analyst
 #show_downloads: true
 theme: jekyll-theme-minimal
